--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/YuCarl77/omp-node-lib/issues"
   },
-  "homepage": "https://github.com/YuCarl77/omp-node-lib#readme"
+  "homepage": "https://github.com/YuCarl77/omp-node-lib#readme",
+  "devDependencies": {
+    "typescript": "^4.7.4"
+  }
 }
