feat: adjust cb and fn which in i18n

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "include": ["src/**/*.ts"],
   "compilerOptions": {
+    "types": ["@types/node"],
     "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "Node",
