--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
   },
   "homepage": "https://github.com/YuCarl77/omp-node-lib#readme",
   "devDependencies": {
-    "omp-wrapper": "@latest",
+    "@types/node": "^18.7.13",
+    "omp-wrapper": "latest",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "iconv-lite": "^0.6.3"
   }
 }
