--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "omp-node-lib",
   "version": "0.0.1",
-  "description": "",
+  "description": "Better with omp-node-ts",
   "main": "dist/bundle.js",
   "types": "dist/bundle.d.ts",
   "scripts": {
