--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "omp-node-lib",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Better with omp-node-ts",
   "main": "dist/bundle.js",
   "types": "dist/bundle.d.ts",
@@ -43,7 +43,7 @@
     "iconv-lite": "^0.6.3",
     "lodash": "^4.17.21",
     "omp-wrapper": "latest",
-    "omp-wrapper-streamer": "latest",
+    "omp-wrapper-streamer": "^0.0.9",
     "pino": "^8.4.2",
     "pino-pretty": "^9.1.0"
   }
