--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "omp-node-lib",
-  "version": "0.4.6",
+  "version": "0.4.7",
   "description": "Better with omp-node-ts",
   "main": "dist/bundle.js",
   "types": "dist/bundle.d.ts",
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/YuCarl77/omp-node-lib#readme",
   "devDependencies": {
+    "@sa-mp/node": "^0.2.0",
     "@types/lodash": "^4.14.184",
     "@types/node": "^18.7.13",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
