--- a/package.json
+++ b/package.json
@@ -30,14 +30,15 @@
     "@types/node": "^18.7.13",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
+    "esbuild": "^0.15.10",
     "eslint": "^8.23.0",
     "husky": "^8.0.1",
     "rollup": "^2.77.2",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-dts": "^4.2.2",
+    "rollup-plugin-esbuild": "^4.10.1",
     "rollup-plugin-node-externals": "^4.1.1",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.32.1",
+    "rollup-plugin-typescript-paths": "^1.4.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
