--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "omp-node-lib",
-  "version": "0.6.0",
+  "version": "0.6.1",
   "description": "Better with omp-node-ts",
   "main": "dist/bundle.js",
   "types": "dist/bundle.d.ts",
@@ -32,27 +32,27 @@
   "homepage": "https://github.com/YuCarl77/omp-node-lib#readme",
   "devDependencies": {
     "@sa-mp/node": "^0.2.0",
-    "@types/lodash": "^4.14.184",
-    "@types/node": "^18.7.13",
-    "@typescript-eslint/eslint-plugin": "^5.35.1",
-    "@typescript-eslint/parser": "^5.35.1",
-    "esbuild": "^0.15.10",
-    "eslint": "^8.23.0",
-    "husky": "^8.0.0",
-    "rollup": "^2.77.2",
+    "@types/lodash": "^4.14.191",
+    "@types/node": "^18.11.17",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/parser": "^5.47.0",
+    "esbuild": "^0.15.18",
+    "eslint": "^8.30.0",
+    "husky": "^8.0.2",
+    "rollup": "^3.8.0",
     "rollup-plugin-delete": "^2.0.0",
-    "rollup-plugin-dts": "^4.2.2",
-    "rollup-plugin-esbuild": "^4.10.1",
-    "rollup-plugin-node-externals": "^4.1.1",
+    "rollup-plugin-dts": "^5.0.0",
+    "rollup-plugin-esbuild": "^5.0.0",
+    "rollup-plugin-node-externals": "^5.0.3",
     "rollup-plugin-typescript-paths": "^1.4.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.9.4"
   },
   "dependencies": {
     "iconv-lite": "^0.6.3",
     "lodash": "^4.17.21",
-    "omp-wrapper": "^0.1.1",
+    "omp-wrapper": "^0.1.4",
     "omp-wrapper-streamer": "^0.1.6",
-    "pino": "^8.4.2",
-    "pino-pretty": "^9.1.0"
+    "pino": "~8.6.1",
+    "pino-pretty": "^9.1.1"
   }
 }
