--- a/package.json
+++ b/package.json
@@ -1,3 +1,17 @@
 {
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@sa-mp/node": "^0.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@typescript-eslint/parser": "^5.52.0",
+    "esbuild": "^0.15.18",
+    "eslint": "^8.34.0",
+    "rollup": "^3.15.0",
+    "rollup-plugin-delete": "^2.0.0",
+    "rollup-plugin-dts": "^5.2.0",
+    "rollup-plugin-esbuild": "^5.0.0",
+    "rollup-plugin-node-externals": "^5.1.2",
+    "rollup-plugin-typescript-paths": "^1.4.0",
+    "typescript": "^4.9.4"
+  }
 }
