--- a/packages/omp-fs-all/package.json
+++ b/packages/omp-fs-all/package.json
@@ -2,46 +2,34 @@
   "name": "omp-fs-all",
   "version": "0.2.2",
   "description": "A collection of all built-in filterscripts",
-  "main": "dist/bundle.js",
-  "types": "dist/bundle.d.ts",
-  "scripts": {
-    "lint": "eslint --fix ./src",
-    "build": "npm run lint && rollup -c",
-    "prepublishOnly": "npm run build"
-  },
-  "prepare": "npm run build",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/YuCarl77/omp-fs-all.git"
-  },
   "keywords": [
     "filterscript",
     "omp",
     "samp"
   ],
-  "author": "",
-  "license": "ISC",
+  "homepage": "https://github.com/YuCarl77/omp-fs-all#readme",
   "bugs": {
     "url": "https://github.com/YuCarl77/omp-fs-all/issues"
   },
-  "homepage": "https://github.com/YuCarl77/omp-fs-all#readme",
-  "devDependencies": {
-    "@rollup/plugin-json": "^6.0.0",
-    "@sa-mp/node": "^0.2.0",
-    "@types/node": "^18.13.0",
-    "@typescript-eslint/eslint-plugin": "^5.52.0",
-    "@typescript-eslint/parser": "^5.52.0",
-    "esbuild": "^0.15.18",
-    "eslint": "^8.34.0",
-    "rollup": "^3.15.0",
-    "rollup-plugin-delete": "^2.0.0",
-    "rollup-plugin-dts": "^5.2.0",
-    "rollup-plugin-esbuild": "^5.0.0",
-    "rollup-plugin-node-externals": "^5.1.2",
-    "rollup-plugin-typescript-paths": "^1.4.0",
-    "typescript": "^4.9.5"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/YuCarl77/omp-fs-all.git"
+  },
+  "license": "ISC",
+  "author": "",
+  "main": "dist/bundle.js",
+  "types": "dist/bundle.d.ts",
+  "scripts": {
+    "build": "pnpm lint && rollup -c",
+    "lint": "eslint --fix ./src",
+    "prepublishOnly": "pnpm build"
   },
   "dependencies": {
-    "omp-node-lib": "workspace:^0.8.3"
-  }
+    "omp-node-lib": "workspace:*"
+  },
+  "devDependencies": {
+    "@rollup/plugin-json": "^6.0.0",
+    "@types/node": "^18.13.0"
+  },
+  "prepare": "pnpm build"
 }
