--- a/package.json
+++ b/package.json
@@ -1,11 +1,27 @@
 {
   "private": true,
+  "scripts": {
+    "lint-staged": "lint-staged",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.{ts,json}": [
+      "prettier --write"
+    ],
+    "*.ts": [
+      "eslint",
+      "prettier --parser=typescript --write"
+    ]
+  },
   "devDependencies": {
     "@sa-mp/node": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
     "esbuild": "^0.15.18",
     "eslint": "^8.34.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.1.2",
+    "prettier": "^2.8.4",
     "rollup": "^3.15.0",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-dts": "^5.2.0",
