--- a/packages/omp-wrapper-streamer/package.json
+++ b/packages/omp-wrapper-streamer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "omp-wrapper-streamer",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "A functional wrapper of the popular SA-MP streamer plugin (v2.9.6) for samp-node.",
   "keywords": [
     "samp",
@@ -12,16 +12,16 @@
     "wrapper",
     "streamer"
   ],
-  "homepage": "https://github.com/yucarl77/omp-wrapper-streamer#readme",
+  "homepage": "https://github.com/dockfries/omp-wrapper-streamer#readme",
   "bugs": {
-    "url": "https://github.com/yucarl77/omp-wrapper-streamer/issues"
+    "url": "https://github.com/dockfries/omp-wrapper-streamer/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yucarl77/omp-wrapper-streamer.git"
+    "url": "git+https://github.com/dockfries/omp-wrapper-streamer.git"
   },
   "license": "ISC",
-  "author": "YuCarl77",
+  "author": "dockfries",
   "main": "dist/bundle.js",
   "types": "dist/bundle.d.ts",
   "scripts": {
