feat: create-app for npm init

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,7 +15,7 @@
     "url": "git+https://github.com/dockfries/omp-node.git"
   },
   "license": "ISC",
-  "author": "",
+  "author": "dockfries",
   "main": "dist/bundle.js",
   "types": "dist/bundle.d.ts",
   "scripts": {
