--- a/packages/wrapper/package.json
+++ b/packages/wrapper/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@infernus/wrapper",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "A functional wrapper of the omp new scripting api (natives and callbacks) for samp-node.",
   "keywords": [
     "samp",
@@ -11,15 +11,15 @@
     "pawn",
     "wrapper"
   ],
-  "homepage": "https://github.com/dockfries/omp-node/tree/main/packages/wrapper#readme",
+  "homepage": "https://github.com/dockfries/infernus/tree/main/packages/wrapper#readme",
   "bugs": {
-    "url": "https://github.com/dockfries/omp-node/issues"
+    "url": "https://github.com/dockfries/infernus/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dockfries/omp-node.git"
+    "url": "git+https://github.com/dockfries/infernus.git"
   },
-  "license": "ISC",
+  "license": "MIT",
   "author": "dockfries",
   "main": "dist/bundle.js",
   "types": "dist/bundle.d.ts",
