--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     ]
   },
   "devDependencies": {
+    "@infernus/eslint-config": "workspace:^",
     "@sa-mp/node": "^0.2.0",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
