--- a/packages/streamer/.eslintrc
+++ b/packages/streamer/.eslintrc
@@ -1,15 +1,3 @@
 {
-  "env": {
-    "es2021": true,
-    "node": true
-  },
-  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
-  "overrides": [],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module"
-  },
-  "plugins": ["@typescript-eslint"],
-  "rules": {}
+  "extends": "@infernus/eslint-config"
 }
