--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "lint-staged": {
     "*.ts": [
-      "eslint"
+      "eslint --fix"
     ],
     "*.{ts,json,yaml}": [
       "prettier --write"
@@ -17,21 +17,21 @@
   "devDependencies": {
     "@infernus/eslint-config": "workspace:^",
     "@sa-mp/node": "^0.2.0",
-    "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.52.0",
-    "@typescript-eslint/parser": "^5.52.0",
+    "@types/node": "^18.16.13",
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^5.59.6",
     "esbuild": "^0.15.18",
-    "eslint": "^8.34.0",
-    "husky": "^8.0.0",
-    "lint-staged": "^13.1.2",
-    "prettier": "^2.8.4",
-    "rollup": "^3.15.0",
+    "eslint": "^8.41.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
+    "prettier": "^2.8.8",
+    "rollup": "^3.22.0",
     "rollup-plugin-delete": "^2.0.0",
-    "rollup-plugin-dts": "^5.2.0",
+    "rollup-plugin-dts": "^5.3.0",
     "rollup-plugin-esbuild": "^5.0.0",
-    "rollup-plugin-node-externals": "^5.1.2",
+    "rollup-plugin-node-externals": "^5.1.3",
     "rollup-plugin-typescript-paths": "^1.4.0",
-    "typescript": "^4.9.4"
+    "typescript": "^5.0.4"
   },
   "prepare": "npm run build"
 }
