--- a/packages/raknet/tsconfig.json
+++ b/packages/raknet/tsconfig.json
@@ -11,6 +11,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "removeComments": true
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   }
 }
