--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "lint-staged": "lint-staged",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "contributors": "all-contributors generate"
   },
   "lint-staged": {
     "*.ts": [
@@ -20,6 +21,7 @@
     "@types/node": "^18.16.13",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
+    "all-contributors-cli": "^6.25.1",
     "esbuild": "^0.15.18",
     "eslint": "^8.41.0",
     "husky": "^8.0.3",
