--- a/packages/filterscript/package.json
+++ b/packages/filterscript/package.json
@@ -32,11 +32,11 @@
     "prepublishOnly": "pnpm build"
   },
   "devDependencies": {
-    "@infernus/core": "workspace:*",
+    "@infernus/core": "workspace:^",
     "@rollup/plugin-json": "^6.0.0"
   },
   "peerDependencies": {
-    "@infernus/core": "workspace:*"
+    "@infernus/core": "workspace:^"
   },
   "prepare": "pnpm build"
 }
