--- a/packages/raknet/package.json
+++ b/packages/raknet/package.json
@@ -38,10 +38,10 @@
   },
   "prepare": "pnpm build",
   "devDependencies": {
-    "@infernus/core": "workspace:*"
+    "@infernus/core": "workspace:^"
   },
   "peerDependencies": {
-    "@infernus/core": "workspace:*"
+    "@infernus/core": "workspace:^"
   },
   "dependencies": {
     "iconv-lite": "^0.6.3"
