--- a/packages/raknet/package.json
+++ b/packages/raknet/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@infernus/raknet",
-  "version": "0.1.1",
+  "version": "0.1.4",
   "description": "A wrapper of the popular open.mp raknet plugin for samp-node.",
   "keywords": [
     "samp",
@@ -36,14 +36,14 @@
     "lint": "eslint --fix ./src",
     "prepublishOnly": "pnpm build"
   },
-  "prepare": "pnpm build",
+  "dependencies": {
+    "iconv-lite": "^0.6.3"
+  },
   "devDependencies": {
     "@infernus/core": "workspace:^"
   },
   "peerDependencies": {
     "@infernus/core": "workspace:^"
   },
-  "dependencies": {
-    "iconv-lite": "^0.6.3"
-  }
+  "prepare": "pnpm build"
 }
