--- a/packages/raknet/package.json
+++ b/packages/raknet/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@infernus/raknet",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "A wrapper of the popular open.mp raknet plugin for samp-node.",
   "keywords": [
     "samp",
@@ -31,6 +31,9 @@
   "main": "dist/bundle.js",
   "module": "dist/bundle.mjs",
   "types": "dist/bundle.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "pnpm lint && rollup -c",
     "lint": "eslint --fix ./src",
