--- a/packages/streamer/package.json
+++ b/packages/streamer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@infernus/streamer",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "description": "A functional wrapper of the popular SA-MP streamer plugin (v2.9.6) for samp-node.",
   "keywords": [
     "samp",
@@ -31,6 +31,9 @@
   "main": "dist/bundle.js",
   "module": "dist/bundle.mjs",
   "types": "dist/bundle.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "pnpm lint && rollup -c",
     "lint": "eslint --fix ./src",
