--- a/packages/streamer/package.json
+++ b/packages/streamer/package.json
@@ -35,9 +35,6 @@
     "dist"
   ],
   "scripts": {
-    "build": "pnpm lint && rollup -c",
-    "lint": "eslint --fix ./src",
-    "prepublishOnly": "pnpm build"
-  },
-  "prepare": "pnpm build"
+    "prepublishOnly": "pnpm -w build"
+  }
 }
