--- a/packages/raknet/package.json
+++ b/packages/raknet/package.json
@@ -34,9 +34,7 @@
   "files": [
     "dist"
   ],
-  "scripts": {
-    "prepublishOnly": "pnpm -w build"
-  },
+  "scripts": {},
   "dependencies": {
     "iconv-lite": "^0.6.3"
   },
