--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.9.5",
+  "version": "0.9.8",
   "private": true,
   "type": "module",
   "scripts": {
@@ -24,33 +24,34 @@
     "@infernus/streamer": "workspace:^",
     "@infernus/wrapper": "workspace:^",
     "iconv-lite": "^0.6.3",
-    "lodash": "^4.17.21",
-    "pino": "~8.6.1"
+    "lodash-unified": "^1.0.3",
+    "pino": "^8.16.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.4.2",
-    "@commitlint/config-conventional": "^18.4.2",
-    "@rollup/plugin-json": "^6.0.0",
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
+    "@rollup/plugin-json": "^6.0.1",
     "@sa-mp/node": "^0.2.0",
-    "@types/node": "^18.16.13",
-    "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "@typescript-eslint/parser": "^5.59.6",
-    "all-contributors-cli": "^6.25.1",
+    "@types/lodash-es": "^4.17.12",
+    "@types/node": "^18.18.13",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "all-contributors-cli": "^6.26.1",
     "bumpp": "^9.2.0",
     "conventional-changelog-cli": "^4.1.0",
     "esbuild": "^0.15.18",
-    "eslint": "^8.41.0",
-    "execa": "^7.1.1",
+    "eslint": "^8.54.0",
+    "execa": "^7.2.0",
     "husky": "^8.0.3",
-    "inquirer": "^9.1.5",
-    "lint-staged": "^13.2.2",
+    "inquirer": "^9.2.12",
+    "lint-staged": "^13.3.0",
     "prettier": "^2.8.8",
-    "rollup": "^3.22.0",
+    "rollup": "^3.29.4",
     "rollup-plugin-delete": "^2.0.0",
-    "rollup-plugin-dts": "^5.3.0",
+    "rollup-plugin-dts": "^5.3.1",
     "rollup-plugin-esbuild": "^5.0.0",
     "rollup-plugin-node-externals": "^5.1.3",
     "rollup-plugin-typescript-paths": "^1.4.0",
-    "typescript": "^5.0.4"
+    "typescript": "^5.3.2"
   }
 }
