--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "node ./scripts/build.js",
     "release": "node ./scripts/release.js",
-    "contributors": "all-contributors generate",
+    "contributors": "all-contributors generate & git add README.md",
     "lint-staged": "lint-staged",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "prepare": "husky install",
