--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint-staged": "lint-staged",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "prepare": "husky install",
-    "preinstall": "npx only-allow pnpm -y"
+    "preinstall": "npx only-allow pnpm -y",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "lint-staged": {
     "*.ts": [
@@ -52,6 +55,7 @@
     "rollup-plugin-esbuild": "^5.0.0",
     "rollup-plugin-node-externals": "^5.1.3",
     "rollup-plugin-typescript-paths": "^1.5.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitepress": "1.0.0-rc.39"
   }
 }
