--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -24,6 +24,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - uses: pnpm/action-setup@v2
+        with:
+          version: 8.14.1
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
