--- a/package.json
+++ b/package.json
@@ -56,6 +56,6 @@
     "rollup-plugin-node-externals": "^5.1.3",
     "rollup-plugin-typescript-paths": "^1.5.0",
     "typescript": "^5.3.3",
-    "vitepress": "1.0.0-rc.39"
+    "vitepress": "^1.0.0-rc.40"
   }
 }
