--- a/package.json
+++ b/package.json
@@ -27,34 +27,34 @@
     "@infernus/streamer": "workspace:^",
     "iconv-lite": "^0.6.3",
     "lodash-unified": "^1.0.3",
-    "pino": "^8.18.0"
+    "pino": "^8.21.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.6.1",
-    "@commitlint/config-conventional": "^18.6.2",
+    "@commitlint/config-conventional": "^18.6.3",
     "@rollup/plugin-json": "^6.1.0",
     "@sa-mp/node": "^0.2.0",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^20.11.17",
-    "@typescript-eslint/eslint-plugin": "^7.0.1",
-    "@typescript-eslint/parser": "^7.0.1",
+    "@types/node": "^20.12.11",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
     "all-contributors-cli": "^6.26.1",
-    "bumpp": "^9.3.0",
+    "bumpp": "^9.4.1",
     "conventional-changelog-cli": "^4.1.0",
-    "esbuild": "^0.20.0",
-    "eslint": "^8.56.0",
+    "esbuild": "^0.20.2",
+    "eslint": "^8.57.0",
     "execa": "^8.0.1",
     "husky": "^9.0.11",
-    "inquirer": "^9.2.14",
+    "inquirer": "^9.2.20",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
-    "rollup": "^4.11.0",
+    "rollup": "^4.17.2",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-esbuild": "^6.1.1",
-    "rollup-plugin-node-externals": "^7.0.1",
+    "rollup-plugin-node-externals": "^7.1.2",
     "rollup-plugin-typescript-paths": "^1.5.0",
-    "typescript": "^5.3.3",
-    "vitepress": "^1.0.0-rc.42"
+    "typescript": "^5.4.5",
+    "vitepress": "^1.1.4"
   }
 }
