--- a/packages/create-app/package.json
+++ b/packages/create-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@infernus/create-app",
-  "version": "0.1.3",
-  "description": "Used to quickly generate an infernus-starter template",
+  "version": "0.2.0",
+  "description": "Command line interface for rapid infernus development",
   "keywords": [
     "omp",
     "init",
@@ -17,14 +17,28 @@
   "files": [
     "dist"
   ],
-  "scripts": {},
+  "scripts": {
+    "dev": "node ./src/index.js"
+  },
   "dependencies": {
+    "@octokit/core": "^6.1.2",
+    "axios": "^1.6.8",
     "chalk": "^5.3.0",
+    "cli-progress": "^3.12.0",
     "decompress": "^4.2.1",
+    "fast-glob": "^3.3.2",
     "fs-extra": "^11.1.1",
     "https-proxy-agent": "^5.0.1",
     "inquirer": "^9.2.12",
-    "node-fetch": "^3.3.2",
-    "ora": "^6.3.1"
+    "semver": "^7.6.2",
+    "yargs": "^17.7.2"
+  },
+  "devDependencies": {
+    "@types/cli-progress": "^3.11.5",
+    "@types/decompress": "^4.2.7",
+    "@types/fs-extra": "^11.0.4",
+    "@types/inquirer": "^9.0.7",
+    "@types/semver": "^7.5.8",
+    "@types/yargs": "^17.0.32"
   }
 }
