--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,14 +22,14 @@
       "name": "cha5e369",
       "avatar_url": "https://avatars.githubusercontent.com/u/77559597?v=4",
       "profile": "https://github.com/cha5e369",
-      "contributions": ["bug", "ideas"]
+      "contributions": ["bug", "ideas", "doc"]
     },
     {
       "login": "Frank441",
       "name": "Frank441",
       "avatar_url": "https://avatars.githubusercontent.com/u/79960940?v=4",
       "profile": "https://github.com/Frank441",
-      "contributions": ["bug"]
+      "contributions": ["bug", "doc"]
     },
     {
       "login": "lyricsdev",
