--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,6 +25,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - uses: pnpm/action-setup@v3
+        with:
+          version: 9.1.0
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
