--- a/package.json
+++ b/package.json
@@ -27,34 +27,36 @@
     "@infernus/streamer": "workspace:^",
     "iconv-lite": "^0.6.3",
     "lodash-unified": "^1.0.3",
-    "pino": "^8.21.0"
+    "pino": "^9.5.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.6.1",
-    "@commitlint/config-conventional": "^18.6.3",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
     "@rollup/plugin-json": "^6.1.0",
     "@sa-mp/node": "^0.2.0",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^20.16.1",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
+    "@types/node": "^20.17.0",
+    "@typescript-eslint/eslint-plugin": "^8.11.0",
+    "@typescript-eslint/parser": "^8.11.0",
     "all-contributors-cli": "^6.26.1",
-    "bumpp": "^9.5.1",
-    "conventional-changelog-cli": "^4.1.0",
-    "esbuild": "^0.20.2",
-    "eslint": "^8.57.0",
-    "execa": "^8.0.1",
-    "husky": "^9.1.4",
-    "inquirer": "^9.3.6",
-    "lint-staged": "^15.2.9",
+    "bumpp": "^9.7.1",
+    "conventional-changelog-cli": "^5.0.0",
+    "esbuild": "^0.24.0",
+    "eslint": "^9.13.0",
+    "execa": "^9.4.1",
+    "globals": "^15.11.0",
+    "husky": "^9.1.6",
+    "inquirer": "^12.0.0",
+    "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
-    "rollup": "^4.21.0",
-    "rollup-plugin-delete": "^2.0.0",
+    "rollup": "^4.24.0",
+    "rollup-plugin-delete": "^2.1.0",
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-esbuild": "^6.1.1",
     "rollup-plugin-node-externals": "^7.1.3",
     "rollup-plugin-typescript-paths": "^1.5.0",
-    "typescript": "^5.5.4",
-    "vitepress": "^1.3.3"
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.11.0",
+    "vitepress": "^1.4.1"
   }
 }
