--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -32,9 +32,7 @@
   "dependencies": {
     "@infernus/streamer": "workspace:^",
     "iconv-lite": "^0.6.3",
-    "lodash-unified": "^1.0.3",
-    "pino": "^9.5.0",
-    "pino-pretty": "^11.3.0"
+    "lodash-unified": "^1.0.3"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.12"
