--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@infernus/core",
-  "version": "0.11.0-beta.13",
+  "version": "0.11.1",
   "description": "Node.js library for Scripting Open Multiplayer",
   "keywords": [
     "omp",
