--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "contributors": "all-contributors generate & git add README.md",
     "lint-staged": "lint-staged",
     "changelog": "conventional-changelog -p conventionalcommits -i CHANGELOG.md -s",
-    "prepare": "husky install",
+    "prepare": "husky",
     "preinstall": "npx only-allow pnpm -y",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
@@ -30,33 +30,33 @@
     "pino": "^9.5.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.5.0",
-    "@commitlint/config-conventional": "^19.5.0",
+    "@commitlint/cli": "^19.6.0",
+    "@commitlint/config-conventional": "^19.6.0",
     "@rollup/plugin-json": "^6.1.0",
     "@sa-mp/node": "^0.2.0",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^20.17.0",
-    "@typescript-eslint/eslint-plugin": "^8.11.0",
-    "@typescript-eslint/parser": "^8.11.0",
+    "@types/node": "^20.17.8",
+    "@typescript-eslint/eslint-plugin": "^8.16.0",
+    "@typescript-eslint/parser": "^8.16.0",
     "all-contributors-cli": "^6.26.1",
-    "bumpp": "^9.7.1",
+    "bumpp": "^9.8.1",
     "conventional-changelog-cli": "^5.0.0",
     "esbuild": "^0.24.0",
-    "eslint": "^9.13.0",
-    "execa": "^9.4.1",
-    "globals": "^15.11.0",
-    "husky": "^9.1.6",
-    "inquirer": "^12.0.0",
+    "eslint": "^9.15.0",
+    "execa": "^9.5.1",
+    "globals": "^15.12.0",
+    "husky": "^9.1.7",
+    "inquirer": "^12.1.0",
     "lint-staged": "^15.2.10",
-    "prettier": "^3.3.3",
-    "rollup": "^4.24.0",
+    "prettier": "^3.4.1",
+    "rollup": "^4.27.4",
     "rollup-plugin-delete": "^2.1.0",
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-esbuild": "^6.1.1",
     "rollup-plugin-node-externals": "^7.1.3",
     "rollup-plugin-typescript-paths": "^1.5.0",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.11.0",
-    "vitepress": "^1.4.1"
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.16.0",
+    "vitepress": "^1.5.0"
   }
 }
