--- a/packages/create-app/package.json
+++ b/packages/create-app/package.json
@@ -24,6 +24,7 @@
     "chalk": "^5.3.0",
     "cli-progress": "^3.12.0",
     "decompress": "^4.2.1",
+    "execa": "^9.5.2",
     "fast-glob": "^3.3.2",
     "fs-extra": "^11.2.0",
     "https-proxy-agent": "^5.0.1",
