--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@infernus/core": "workspace:^",
     "@infernus/streamer": "workspace:^",
     "iconv-lite": "^0.6.3",
+    "jschardet": "^3.1.4",
     "lodash-unified": "^1.0.3",
     "pino": "^9.5.0"
   },
