--- a/package.json
+++ b/package.json
@@ -22,43 +22,36 @@
       "prettier --write"
     ]
   },
-  "dependencies": {
-    "@infernus/core": "workspace:^",
-    "@infernus/streamer": "workspace:^",
-    "iconv-lite": "^0.6.3",
-    "jschardet": "^3.1.4",
-    "lodash-unified": "^1.0.3",
-    "pino": "^9.5.0"
-  },
   "devDependencies": {
-    "@commitlint/cli": "^19.6.0",
-    "@commitlint/config-conventional": "^19.6.0",
-    "@eslint/js": "^9.19.0",
+    "@commitlint/cli": "^19.7.1",
+    "@commitlint/config-conventional": "^19.7.1",
+    "@eslint/js": "^9.21.0",
+    "@rollup/plugin-commonjs": "^28.0.2",
     "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^16.0.0",
     "@sa-mp/node": "^0.2.0",
-    "@types/lodash-es": "^4.17.12",
-    "@types/node": "^20.17.8",
-    "@typescript-eslint/eslint-plugin": "^8.16.0",
-    "@typescript-eslint/parser": "^8.16.0",
+    "@types/node": "^22.13.9",
+    "@typescript-eslint/eslint-plugin": "^8.26.0",
+    "@typescript-eslint/parser": "^8.26.0",
     "all-contributors-cli": "^6.26.1",
-    "bumpp": "^9.8.1",
+    "bumpp": "^10.0.3",
     "conventional-changelog-cli": "^5.0.0",
-    "esbuild": "^0.24.0",
-    "eslint": "^9.15.0",
-    "execa": "^9.5.1",
-    "globals": "^15.12.0",
+    "esbuild": "^0.25.0",
+    "eslint": "^9.21.0",
+    "execa": "^9.5.2",
+    "globals": "^16.0.0",
     "husky": "^9.1.7",
-    "inquirer": "^12.1.0",
-    "lint-staged": "^15.2.10",
-    "prettier": "^3.4.1",
-    "rollup": "^4.27.4",
-    "rollup-plugin-delete": "^2.1.0",
+    "inquirer": "^12.4.2",
+    "lint-staged": "^15.4.3",
+    "prettier": "^3.5.3",
+    "rollup": "^4.34.9",
+    "rollup-plugin-delete": "^3.0.0",
     "rollup-plugin-dts": "^6.1.1",
-    "rollup-plugin-esbuild": "^6.1.1",
-    "rollup-plugin-node-externals": "^7.1.3",
+    "rollup-plugin-esbuild": "^6.2.1",
+    "rollup-plugin-node-externals": "^8.0.0",
     "rollup-plugin-typescript-paths": "^1.5.0",
-    "typescript": "^5.7.2",
-    "typescript-eslint": "^8.16.0",
-    "vitepress": "^1.5.0"
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.0",
+    "vitepress": "^1.6.3"
   }
 }
