--- a/packages/query/package.json
+++ b/packages/query/package.json
@@ -35,7 +35,8 @@
   ],
   "scripts": {},
   "dependencies": {
-    "iconv-lite": "^0.6.3",
-    "jschardet": "^3.1.4"
+    "@dockfries/chardetng": "^0.0.1",
+    "jschardet": "^3.1.4",
+    "iconv-lite": "^0.6.3"
   }
 }
