--- a/packages/query/package.json
+++ b/packages/query/package.json
@@ -36,7 +36,7 @@
   "scripts": {},
   "dependencies": {
     "@dockfries/chardetng": "^0.0.1",
-    "jschardet": "^3.1.4",
-    "iconv-lite": "^0.6.3"
+    "iconv-lite": "^0.6.3",
+    "jschardet": "^3.1.4"
   }
 }
