--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "node ./scripts/build.js",
-    "release": "node ./scripts/release.js",
+    "build": "tsx scripts/build.ts",
+    "release": "tsx scripts/release.ts",
     "contributors": "all-contributors generate & git add README.md",
     "lint-staged": "lint-staged",
     "changelog": "conventional-changelog -p conventionalcommits -i CHANGELOG.md -s",
@@ -26,6 +26,8 @@
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@eslint/js": "^9.22.0",
+    "@infernus/types": "workspace:^",
+    "@inquirer/prompts": "^7.4.0",
     "@rollup/plugin-commonjs": "^28.0.3",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^16.0.1",
@@ -40,7 +42,6 @@
     "execa": "^9.5.2",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
-    "inquirer": "^12.5.0",
     "lint-staged": "^15.5.0",
     "prettier": "^3.5.3",
     "rollup": "^4.35.0",
@@ -49,9 +50,9 @@
     "rollup-plugin-esbuild": "^6.2.1",
     "rollup-plugin-node-externals": "^8.0.0",
     "rollup-plugin-typescript-paths": "^1.5.0",
+    "tsx": "^4.19.3",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.26.1",
-    "vitepress": "^1.6.3",
-    "@infernus/types": "workspace:^"
+    "vitepress": "^1.6.3"
   }
 }
