--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -34,6 +34,7 @@
     "iconv-lite": "^0.6.3"
   },
   "devDependencies": {
-    "es-toolkit": "^1.33.0"
+    "es-toolkit": "^1.33.0",
+    "fastest-levenshtein": "^1.0.16"
   }
 }
