feat(nex-ac): try port, but there must be bugs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
+    "lib": ["ESNext"],
     "module": "ESNext",
     "moduleResolution": "Node",
     "paths": {
