--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -60,10 +60,10 @@
       "contributions": ["example"]
     },
     {
-      "login": "christhefrog",
-      "name": "Chris👋",
+      "login": "kchmie",
+      "name": "Chris",
       "avatar_url": "https://avatars.githubusercontent.com/u/47784402?v=4",
-      "profile": "https://github.com/christhefrog",
+      "profile": "https://github.com/kchmie",
       "contributions": ["ideas"]
     }
   ],
