--- a/packages/streamer/package.json
+++ b/packages/streamer/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@infernus/streamer",
   "version": "0.11.3",
+  "private": true,
   "description": "A functional wrapper of the popular SA-MP streamer plugin (v2.9.6) for samp-node.",
   "keywords": [
     "samp",
