feat(colandreas, map-loader): maybe can check colandreas this way?

--- a/packages/map-loader/package.json
+++ b/packages/map-loader/package.json
@@ -36,9 +36,16 @@
   ],
   "scripts": {},
   "devDependencies": {
+    "@infernus/colandreas": "workspace:^",
     "@infernus/core": "workspace:^"
   },
   "peerDependencies": {
+    "@infernus/colandreas": "workspace:^",
     "@infernus/core": "workspace:^"
+  },
+  "peerDependenciesMeta": {
+    "@infernus/colandreas": {
+      "optional": true
+    }
   }
 }
