--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "tsx scripts/build.ts",
+    "build-all": "tsx scripts/build-all.ts",
     "release": "tsx scripts/release.ts",
     "contributors": "all-contributors generate & git add README.md",
     "lint-staged": "lint-staged",
@@ -31,6 +32,7 @@
     "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-typescript": "^12.1.4",
     "@types/node": "^22.17.0",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
     "@typescript-eslint/parser": "^8.38.0",
@@ -50,6 +52,7 @@
     "rollup-plugin-esbuild": "^6.2.1",
     "rollup-plugin-node-externals": "^8.0.1",
     "rollup-plugin-typescript-paths": "^1.5.0",
+    "tslib": "^2.8.1",
     "tsx": "^4.20.3",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.38.0",
