--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
+    "noEmitOnError": true,
     "lib": ["ESNext"],
     "module": "ESNext",
     "moduleResolution": "Node",
