chore(packages): add exports.types in package.json

--- a/packages/streamer/package.json
+++ b/packages/streamer/package.json
@@ -26,7 +26,8 @@
   "exports": {
     ".": {
       "require": "./dist/bundle.js",
-      "import": "./dist/bundle.mjs"
+      "import": "./dist/bundle.mjs",
+      "types": "./dist/bundle.d.ts"
     }
   },
   "main": "dist/bundle.js",
