--- a/packages/gps/package.json
+++ b/packages/gps/package.json
@@ -28,7 +28,8 @@
   "exports": {
     ".": {
       "require": "./dist/bundle.js",
-      "import": "./dist/bundle.mjs"
+      "import": "./dist/bundle.mjs",
+      "types": "./dist/bundle.d.ts"
     }
   },
   "main": "dist/bundle.js",
