--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
     "@eslint/js": "^9.37.0",
+    "@infernus/streamer": "workspace:^",
     "@infernus/types": "workspace:^",
     "@inquirer/prompts": "^7.9.0",
     "@rollup/plugin-commonjs": "^28.0.8",
